--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 #container {
     display: grid;
     grid-template-columns: 30% auto;
-    grid-template-rows: 150px 100px 1fr;
+    grid-template-rows: 150px 70px 1fr;
     grid-gap: 5px;
     min-height: 100vh;
     max-height: 100vh;
@@ -51,12 +51,12 @@ body {
     color: white;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    gap: 60px;
+    gap: 30px;
     grid-column: 1/2;
     grid-row: 2/4;
-    padding: 35px 0px 35px 0px;
+    padding: 20px 0px 20px 0px;
 }
 
 #announcement-bar, #front-page-posts {
@@ -66,7 +66,7 @@ body {
     align-items: center;
     gap: 20px;
     color: white;
-    padding: 35px;
+    padding: 20px;
 }
 
 #announcement-bar {
@@ -91,6 +91,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
+    gap: 30px;
 }
 
 .form-input-grid {
@@ -139,6 +140,8 @@ body {
     /* background-color: peru; */
     color: black;
     padding: 5px;
+    border: solid grey 2px;
+    border-radius: 5px;
 }
 
 .post-avatar {
