--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,11 @@ body {
     background-color: darkolivegreen;
     color: white;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
     padding: 20px;
-    grid-column: 1/3;
-    grid-row: 1/2;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
 }
 
 #logo {
@@ -47,19 +47,19 @@ body {
 }
 
 #profile {
-    /* background-color: lightsalmon; */
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     gap: 30px;
-    grid-column: 1/2;
-    grid-row: 2/4;
-    padding: 20px 0px 20px 0px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+    padding: 20px 0;
 }
 
-#announcement-bar, #front-page-posts {
+#announcement-bar,
+#front-page-posts {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -70,21 +70,19 @@ body {
 }
 
 #announcement-bar {
-    /* background-color: darkseagreen; */
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 #front-page-posts {
-    /* background-color: darkred; */
-    grid-column: 2/3;
-    grid-row: 3/4;
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
     overflow-x: hidden;
     overflow-y: auto;
-    /* max-height: 100%; */
 }
 
-.auth-form, #signup-grid {
+.auth-form,
+#signup-grid {
     width: 80%;
     padding: 10px;
     display: flex;
@@ -99,14 +97,16 @@ body {
     row-gap: 20px;
 }
 
-#uname, #pword {
+#uname,
+#pword {
     border-radius: 5px;
-    height: 20px; 
+    height: 20px;
     font-size: 20px;
     padding: 10px;
 }
 
-.login, .signup {
+.login,
+.signup {
     border: 2px solid lightblue;
     border-radius: 5px;
     background: lightblue;
@@ -119,7 +119,8 @@ body {
     width: 100%;
 }
 
-.login:hover, .signup:hover {
+.login:hover,
+.signup:hover {
     cursor: pointer;
 }
 
@@ -129,81 +130,76 @@ body {
     text-align: center;
 }
 
-
 .individual-post {
+    padding: 5px;
     display: grid;
     grid-template-columns: 10% auto 30%;
     grid-template-rows: 18% 13% auto 25% 10%;
     grid-gap: 5px;
     width: 100%;
     height: 200px;
-    /* background-color: peru; */
     color: black;
-    padding: 5px;
     border: solid grey 2px;
     border-radius: 5px;
 }
 
 .post-avatar {
-    grid-column: 1/2;
-    grid-row: 1/3;
-    /* background-color: cornsilk; */
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
 }
 
 .post-username {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    /* background-color: cornsilk; */
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     font-size: 20px;
 }
 
 .post-time {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    /* background-color: cornsilk; */
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     font-size: 15px;
 }
 
 .post-title {
-    grid-column: 1/3;
-    grid-row: 3/4;
-    /* background-color: cornsilk; */
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
     font-size: 25px;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.post-username, .post-time, .post-title {
+.post-username,
+.post-time,
+.post-title {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
 .post-content-preview {
-    grid-column: 1/3;
-    grid-row: 4/6;
-    /* background-color: cornsilk; */
+    grid-column: 1 / 3;
+    grid-row: 4 / 6;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .post-photo {
-    grid-column: 3/4;
-    grid-row: 1/5;
-    /* background-color: cornsilk; */
+    grid-column: 3 / 4;
+    grid-row: 1 / 5;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
 }
 
 .post-stats {
-    grid-column: 3/4;
-    grid-row: 5/6;
-    /* background-color: cornsilk; */
+    grid-column: 3 / 4;
+    grid-row: 5 / 6;
     display: flex;
     justify-content: space-between;
-    align-items: center;;
+    align-items: center;
 }
