--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,20 @@ body {
     border-radius: 5px;
     height: 20px;
     font-size: 20px;
-    padding: 10px;
+    padding: 10px 0px 10px 0px;
+    width: 99%;
+}
+
+.placeholder-container {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+}
+
+
+.placeholder {
+    color: black;
+    font-size: 20px;
 }
 
 .login,
