--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,226 @@ body {
 .placeholder {
     color: black;
     font-size: 20px;
+}body {
+    background-color: #fff;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    margin: 0;
 }
+
+#container {
+    display: grid;
+    grid-template-columns: 30% auto;
+    grid-template-rows: 150px 70px 1fr;
+    grid-gap: 5px;
+    min-height: 100vh;
+    max-height: 100vh;
+}
+
+#header {
+    background-color: darkolivegreen;
+    color: white;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+}
+
+#logo {
+    font-size: 80px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#header-button-container {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-left: auto;
+}
+
+.header-button {
+    width: 100%;
+}
+
+#profile {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+    padding: 20px 0;
+}
+
+#announcement-bar,
+#front-page-posts {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    color: white;
+    padding: 20px;
+}
+
+#announcement-bar {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+#front-page-posts {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.auth-form,
+#signup-grid {
+    width: 80%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    gap: 30px;
+}
+
+.form-input-grid {
+    display: grid;
+    row-gap: 20px;
+}
+
+#uname,
+#pword {
+    border-radius: 5px;
+    height: 20px;
+    font-size: 20px;
+    padding: 10px 0px 10px 0px;
+    width: 99%;
+}
+
+.placeholder-container {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+}
+
+
+.placeholder {
+    color: black !important;
+    font-size: 20px;
+}
+
+.login,
+.signup {
+    border: 2px solid lightblue;
+    border-radius: 5px;
+    background: lightblue;
+    padding: 5px 15px;
+    color: black;
+    font-size: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+}
+
+.login:hover,
+.signup:hover {
+    cursor: pointer;
+}
+
+.title-text {
+    font-size: 30px;
+    color: black;
+    text-align: center;
+}
+
+.individual-post {
+    padding: 5px;
+    display: grid;
+    grid-template-columns: 10% auto 30%;
+    grid-template-rows: 18% 13% 1fr 25% 10%;
+    grid-gap: 5px;
+    width: 100%;
+    height: 200px;
+    max-height: 200px;
+    color: black;
+    border: solid grey 2px;
+    border-radius: 5px;
+}
+
+.post-avatar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.post-username {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    font-size: 20px;
+}
+
+.post-time {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    font-size: 15px;
+}
+
+.post-title {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    font-size: 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.post-username,
+.post-time,
+.post-title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.post-content-preview {
+    grid-column: 1 / 3;
+    grid-row: 4 / 6;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.post-photo {
+    grid-column: 3 / 4;
+    grid-row: 1 / 5;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.post-stats {
+    grid-column: 3 / 4;
+    grid-row: 5 / 6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 .login,
 .signup {
@@ -151,6 +370,7 @@ body {
     grid-gap: 5px;
     width: 100%;
     height: 200px;
+    max-height: 200px;
     color: black;
     border: solid grey 2px;
     border-radius: 5px;
