button style change

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/***************/
+/* BASE LAYOUT */
+/***************/
+
 body {
     background-color: #fff;
     font-family: 'Roboto', sans-serif;
@@ -13,6 +17,10 @@ body {
     min-height: 100vh;
     max-height: 100vh;
 }
+
+/******************/
+/* HEADER CONTENT */
+/******************/
 
 #header {
     background-color: darkolivegreen;
@@ -42,9 +50,9 @@ body {
     margin-left: auto;
 }
 
-.header-button {
-    width: 100%;
-}
+/*******************/
+/* PROFILE SIDEBAR */
+/*******************/
 
 #profile {
     color: white;
@@ -57,6 +65,30 @@ body {
     grid-row: 2 / 4;
     padding: 20px 0;
 }
+
+/* LOGIN */
+
+.auth-form,
+#signup-grid {
+    width: 80%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    gap: 30px;
+}
+
+.form-input-grid {
+    display: grid;
+    row-gap: 20px;
+}
+
+/* SIGNUP */
+
+/******************/
+/* NEW POSTS PAGE */
+/******************/
 
 #announcement-bar,
 #front-page-posts {
@@ -81,21 +113,9 @@ body {
     overflow-y: auto;
 }
 
-.auth-form,
-#signup-grid {
-    width: 80%;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    gap: 30px;
-}
 
-.form-input-grid {
-    display: grid;
-    row-gap: 20px;
-}
+
+
 
 #uname,
 #pword {
