--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 
 #container {
     display: grid;
-    grid-template-columns: 30% auto;
+    grid-template-columns: 25% auto;
     grid-template-rows: 150px 70px 1fr;
     grid-gap: 5px;
     min-height: 100vh;
@@ -31,10 +31,6 @@ body {
     text-align: center;
     text-decoration: none;
     width: 100%;
-}
-
-.button-style:hover {
-    cursor: pointer;
 }
 
 .title-text {
@@ -183,19 +179,44 @@ body {
 /* INDIVIDUAL POSTS */
 /********************/
 
-.individual-post {
+/* POST FORMAT */
+
+.individual-post,
+.full-post {
     padding: 5px;
     display: grid;
-    grid-template-columns: 10% auto 30%;
-    grid-template-rows: 18% 13% 1fr 25% 10%;
     grid-gap: 5px;
     width: 100%;
-    height: 200px;
-    max-height: 200px;
     color: black;
     border: solid grey 2px;
     border-radius: 5px;
 }
+
+.individual-post {
+    grid-template-columns: 10% auto 30%;
+    grid-template-rows: 18% 13% 1fr 25% 10%;
+    height: 200px;
+    max-height: 200px;
+}
+
+.full-post {
+    grid-template-columns: 15% auto 30%;
+    grid-template-rows: calc(0.27 * 200px) calc(0.195 * 200px) calc(0.535 * 200px) auto 20px;
+    height: auto;
+}
+
+/* POST GENERAL STYLING */
+
+.post-username,
+.post-time,
+.post-title,
+.post-title-full {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+/* POST PROFILE PICTURE */
 
 .post-avatar {
     grid-column: 1 / 2;
@@ -206,17 +227,23 @@ body {
     border-radius: 5px;
 }
 
+/* POST USERNAME */
+
 .post-username {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     font-size: 20px;
 }
 
+/* POST TIME */
+
 .post-time {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     font-size: 15px;
 }
+
+/* POST TITLE */
 
 .post-title {
     grid-column: 1 / 3;
@@ -226,17 +253,17 @@ body {
     text-overflow: ellipsis;
 }
 
-.post-username,
-.post-time,
-.post-title {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+.post-title-full {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    font-size: 35px;
 }
 
 a {
     color: black;
 }
+
+/* POST CONTENT */
 
 .post-content-preview {
     grid-column: 1 / 3;
@@ -245,20 +272,166 @@ a {
     text-overflow: ellipsis;
 }
 
-.post-photo {
+.post-content-full {
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+    padding: 20px 0px 20px 0px;
+}
+
+/* POST PHOTO */
+
+.post-photo,
+.post-photo-full {
     grid-column: 3 / 4;
-    grid-row: 1 / 5;
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
 }
 
-.post-stats {
-    grid-column: 3 / 4;
-    grid-row: 5 / 6;
+.post-photo {
+    grid-row: 1 / 5;
+}
+
+.post-photo-full {
+    grid-row: 1 / 4;
+}
+
+/* POST STATS */
+
+.post-stats,
+.post-stats-full {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+.post-stats {
+    grid-column: 3 / 4;
+    grid-row: 5 / 6;
+}
+
+.post-stats-full {
+    grid-column: 1 / 4;
+    grid-row: 5 / 6;
+}
+
+
+/***********************/
+/* INDIVIDUAL COMMENTS */
+/***********************/
+
+#comment-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+}
+
+.individual-comment {
+    padding: 5px;
+    display: grid;
+    grid-template-columns: 8% auto 10%;
+    grid-template-rows: calc(0.25 * 100px) calc(0.20 * 100px) auto;
+    height: auto;
+    grid-gap: 5px;
+    width: 100%;
+    color: black;
+    border: solid grey 2px;
+    border-radius: 5px;
+    /* height: 120px;
+    max-height: 120px; */
+    /* background-color: peru; */
+}
+
+/* COMMENT GENERAL STYLING */
+
+.comment-username,
+.comment-time {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    /* background-color: cornsilk; */
+}
+
+/* COMMENT PROFILE PICTURE */
+
+.comment-avatar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    /* background-color: cornsilk; */
+}
+
+/* COMMENT USERNAME */
+
+.comment-username {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    font-size: 20px;
+    /* background-color: cornsilk; */
+}
+
+/* COMMENT TIME */
+
+.comment-time {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    font-size: 15px;
+    /* background-color: cornsilk; */
+}
+
+/* COMMENT CONTENT */
+
+.comment-content {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    /* background-color: cornsilk; */
+}
+
+/* COMMENT STATS */
+
+.comment-stats {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    /* background-color: cornsilk; */
+}
+
+.vote-style {
+    border: 2px solid grey;
+    border-radius: 5px;
+    padding: 5px 5px;
+    color: black;
+    font-size: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+    width: 80%;
+}
+
+/* LEAVE A COMMENT */
+
+.comment-form {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+}
+
+#leave-comment {
+    width: 100%; /* Make it full width */
+    
+}
+
+#post-comment {
+    width: 20%;
+}
