--- a/css/styles.css
+++ b/css/styles.css
@@ -341,9 +341,6 @@ a {
     color: black;
     border: solid grey 2px;
     border-radius: 5px;
-    /* height: 120px;
-    max-height: 120px; */
-    /* background-color: peru; */
 }
 
 /* COMMENT GENERAL STYLING */
@@ -353,7 +350,6 @@ a {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    /* background-color: cornsilk; */
 }
 
 /* COMMENT PROFILE PICTURE */
@@ -365,7 +361,6 @@ a {
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
-    /* background-color: cornsilk; */
 }
 
 /* COMMENT USERNAME */
@@ -374,7 +369,6 @@ a {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     font-size: 20px;
-    /* background-color: cornsilk; */
 }
 
 /* COMMENT TIME */
@@ -383,7 +377,6 @@ a {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     font-size: 15px;
-    /* background-color: cornsilk; */
 }
 
 /* COMMENT CONTENT */
@@ -391,7 +384,6 @@ a {
 .comment-content {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
-    /* background-color: cornsilk; */
 }
 
 /* COMMENT STATS */
@@ -402,13 +394,13 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    /* background-color: cornsilk; */
 }
 
 .vote-style {
     border: 2px solid grey;
     border-radius: 5px;
     padding: 5px 5px;
+    margin: 0px 5px;
     color: black;
     font-size: 10px;
     box-sizing: border-box;
@@ -420,18 +412,26 @@ a {
 /* LEAVE A COMMENT */
 
 .comment-form {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 80% 19%;
+    grid-template-rows: 1fr;
+    grid-gap: 10px;
+    color: black;
     width: 100%;
+    border: 2px solid grey;
+    border-radius: 5px;;
+    padding: 5px;
 }
 
 #leave-comment {
-    width: 100%; /* Make it full width */
-    
+    width: 100%;
+    border: transparent;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
 
 #post-comment {
-    width: 20%;
+    width: auto;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
 }
