--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,75 @@ body {
 
 /* SIGNUP */
 
+#signup-form {
+    background-color: cornsilk; 
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+    padding: 20px 0;
+    max-height: 100%;
+}
+.form-signup-grid {
+    display: grid;
+    row-gap: 15px;
+}
+
+#f-name,
+#l-name,
+#u-name,
+#d-of-b,
+#email,
+#phone,
+#address,
+#p-word,
+#confirm-pword,
+#profile-photo {
+    border-radius: 5px;
+    height: 20px;
+    font-size: 20px;
+    padding: 10px 5px 10px 5px;
+    width: 99%;
+}
+
+#upload-photo{
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: center;
+    gap: 20px;
+    color: white;
+    padding: 20px;
+    background-color: cornsilk;
+}
+
+.profile-photo{
+    width: auto;
+    height: 800px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+#upload-photo-button{
+    font-family: "LS", sans-serif;
+    border: 2px solid var(--accent-1);
+    border-radius: 5px;
+    background: var(--accent-1);
+    padding: 5px 15px;
+    color: black;
+    font-size: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+    width: 20%;
+}
+
 /******************/
 /* NEW POSTS PAGE */
 /******************/
