fixed elements outside form in signup page

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,14 @@ body {
     max-height: 100vh;
 }
 
+#signup-container {
+    display: grid;
+    grid-template-columns: 25% auto;
+    grid-template-rows: 180px 1fr;
+    min-height: 100vh;
+    max-height: 100vh;
+}
+
 /* GENERAL STYLING */
 
 .button-style {
@@ -137,10 +145,19 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 30px;
-    grid-column: 1 / 2;
-    grid-row: 2 / 4;
+    
     padding: 20px 0;
     max-height: 100%;
+}
+
+.profile-signup {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.profile-else {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
 }
 
 /* LOGIN */
@@ -172,9 +189,11 @@ body {
 
 /* holds labels for input fields */
 .placeholder-container {
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .placeholder {
@@ -195,7 +214,34 @@ body {
 /* SIGNUP PAGE*/
 /**************/
 
-#signup-form {
+.signup-form-container {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 25% auto;
+    grid-template-rows: 70px 1fr;
+    min-height: 100%;
+}
+
+.signup-input {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    width: 99%;
+    padding-bottom: 30px;
+}
+
+.profile-picture-container {
+    /* width: 80%; */
+    /* padding: 10px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.signup-form {
     background-color: cornsilk; 
     color: white;
     display: flex;
@@ -243,7 +289,8 @@ body {
     background-color: cornsilk;
 }
 
-#create-post {
+#create-post,
+.signup-input {
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -306,7 +353,15 @@ body {
 }
 
 .add-post-photo{
-    width: 100%;
+    width: 80%;
+    height: auto;
+    margin-top: 25px;
+    display: block;
+    object-fit: cover;
+}
+
+.add-profile-photo {
+    width: 80%;
     height: auto;
     margin-top: 25px;
     display: block;
@@ -333,6 +388,7 @@ body {
 
 /* all the pages on the front page */
 #announcement-bar,
+#signup-title,
 #front-page-posts,
 #view-post-container {
     display: flex;
@@ -348,6 +404,11 @@ body {
 #announcement-bar {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+}
+
+#signup-title {
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 #front-page-posts,
