creating a post error handlers working + font changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,10 @@ body {
     text-align: center;
 }
 
+textarea, input[type="text"] {
+    font-family: 'LS', sans-serif;
+}
+
 /******************/
 /* HEADER CONTENT */
 /******************/
