image size error checking complete

--- a/css/styles.css
+++ b/css/styles.css
@@ -697,7 +697,7 @@ a {
 }
 
 /* comment button */
-#post-comment {
+.post-comment {
     width: auto;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
