completed Part B, needs to be properly tested. updated ajaxBacken.php, style.css, eventHandler.js, EventRegisterComment.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -613,6 +613,13 @@ a {
     justify-content: flex-start;
 }
 
+/*VOTE BUTTON HIGHLIGHT_FADE*/
+
+.highlight-update {
+    background-color: #ffff99; 
+    transition: background-color 5s ease-out; 
+}
+
 /* COMMENT PROFILE PICTURE */
 
 .comment-avatar {
